--- a/fullstack-backend.crud/src/main/resources/application.properties
+++ b/fullstack-backend.crud/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=fullstack-backend.crud
 server.port=9090
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/UserM
-spring.datasource.username=root
-spring.datasource.password=Pass7817&%$
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+debug=false
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost:3306/UserM
+# spring.datasource.username=root
+# spring.datasource.password=Pass7817&%$
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
